# REDIS_ActixWeb_TOKIO_challenge

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
migrations/2025-05-27-100009_create_providers/: down.sql  up.sql
migrations/2025-05-27-142506_create_events/: down.sql
migrations/2025-05-27-151129_insert_providers/: up.sql
solution/: .dockerignore  .env  .env copy  Cargo.toml  Dockerfile  README.md  deployment-guide.md  diesel.toml  docker-compose.yaml
solution/app/: Cargo.toml
solution/async_worker/: Cargo.toml  README.md  RUNBOOK.md
solution/async_worker/src/: config.rs  error.rs  event_xml.rs  handler.rs  lib.rs  main.rs  utils.rs  xml_models.rs
solution/async_worker/src/mappers/: mod.rs
solution/common/: Cargo.toml
solution/common/src/: lib.rs  persist.rs  xml_models.rs
solution/storage/: Cargo.toml  README.md
solution/storage/migrations/2025-05-27-100009_create_providers/: down.sql  up.sql
solution/storage/migrations/2025-05-27-142506_create_base_plans/: down.sql
solution/storage/migrations/2025-05-27-142506_create_events/: up.sql
solution/storage/migrations/2025-05-27-142506_create_plans/: down.sql  up.sql
solution/storage/migrations/2025-05-27-142508_create_base_plans/: up.sql
solution/storage/migrations/2025-05-27-142512_create_zones/: up.sql
solution/storage/migrations/2025-05-27-148955_add_unique_constraint/: up.sql
solution/storage/migrations/2025-05-27-151129_insert_providers/: up.sql
solution/storage/migrations/2025-05-27-181155_add_unique_constraint/: up.sql
solution/storage/migrations/2025-06-03-173756_create_providers/: down.sql  up.sql
solution/storage/migrations/2025-06-03-173846_create_base_plans/: up.sql
solution/storage/migrations/2025-06-03-174014_create_plans/: up.sql
solution/storage/migrations/2025-06-03-174047_create_zones/: down.sql  up.sql
solution/storage/migrations/2025-06-03-174122_insert_providers/: up.sql
solution/storage/src/: base_plan.rs  config.rs  connect.rs  error.rs  errors.rs  event.rs  lib.rs  plan.rs  pool.rs  provider.rs  schema.rs  zone.rs
solution/storage/src/async_proc_macro/: Cargo.toml
solution/storage/src/async_proc_macro/src/: lib.rs
solution/storage/src/connections/: cache.rs  db.rs  db_connection.rs  redis.rs
solution/storage/src/models/: base_plans.rs  event.rs  mod.rs  plans.rs  provider.rs  providers.rs  zones.rs
solution/webapp/: Cargo.toml  README.md
solution/webapp/src/: config.rs  errors.rs  handler.rs  helpers.rs  lib.rs  main.rs  service.rs
src/: .env
src/storage/: schema.rs
src/storage/migrations/2025-05-27-142506_create_events/: up.sql
src/storage/migrations/2025-05-27-151129_insert_providers/: up.sql
storage/migrations/2025-05-27-100009_create_providers/: up.sql
storage/migrations/2025-05-27-142506_create_events/: down.sql
storage/models/: provider.rs
