[package]
authors = ["Pablo Bisceglia <pbisceglia@gmail.com>"]
name = "async_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "0.8", features = ["v4","v5"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "r2d2"] }
chrono = "0.4"
dotenv = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

storage = {path = "../storage"}