[package]
authors = ["Pablo Bisceglia <pbisceglia@gmail.com>"]
name = "async_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "*"
env_logger = "0.11.8"
log = "0.4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
storage = { path = "../storage" }
tokio = { version = "0.2.25", features = ["blocking", "macros"] }
uuid = { version = "0.8", features = ["v4","v5"] }
