[package]
authors = ["Pablo Bisceglia <pbisceglia@gmail.com>"]
name = "async_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "*"
env_logger = "0.11.8"
envy = "0.4"
log = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
storage = { path = "../storage" }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4","v5"] }

