[package]
authors = ["Pablo Bisceglia <pbisceglia@gmail.com>"]
name = "storage"
version = "0.1.0"
edition = "2021"

[features]
data_migration = []
aio = []

[dependencies]
bigdecimal = "0.4.8" # https://docs.rs/crate/diesel/1.4.0
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "r2d2"] }

dotenv = "0.15.0"
env_logger = "0.11.8"
envy = "0.4"

thiserror = "1.0.23"
anyhow = "1.0.98"
async-trait = "0.1.79"
bytes = "1.6.0"

futures = "0.3.5"
lazy_static = "1.3.0"
log = "0.4.0"
r2d2 = "0.8.4"
rand = "0.9.1"
redis = { version = "0.17.0", features = [ "aio", "tokio-rt-core" ] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"

strum = "0.18.0"
strum_macros = "0.18.0"

tokio = { version = "0.2.25", features = ["blocking", "macros"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
