[package]
authors = ["Pablo Bisceglia <pbisceglia@gmail.com>"]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7"
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = "0.4"
dotenv = "*"
env_logger = "0.11.8"
envy = "0.4"
log = "0.4"
redis = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
storage = { path = "../storage" }
tokio = { version = "1.45.1", features = ["full"] }
utoipa = "5.4"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }


