[package]
name = "async_proc_macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
env_logger = "0.11.8"
log = "0.4.0"
proc-macro2 = "1.0"
quote = "1.0"


syn = { version = "=1.0.57", features = ["full", "extra-traits"] }
tokio = { version = "0.2.25", features = ["blocking"] }
